<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">JMusic</string>
    <string name="album_art">Album Art</string>
    <string name="song_title">Song Title</string>
    <string name="artist_name">Artist Name</string>
    <string name="play_pause">Play/Pause</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="now_playing">Now Playing</string>
    <string name="lyrics">Lyrics</string>
    <string name="queue">Queue</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
</resources>
